# mmWaveVizLog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  firmware_task.yml  validation_task.yml
.github/workflows/: release.yml  zephyr.yml
arduino/MR60BHA2_Sensor_VisLog/: MR60BHA2_Sensor_VisLog.ino  README.md  ambient_light.cpp  dashboard_page.h  json_stream.h  vislog_private_config.example.h  web_server.h
docs/: dashboard-api-validation.md  firmware-module-map.md  release-management.md  software-architecture.md  software-requirements.md  software-validation-plan.md
protocol/: README.md  sample.schema.json  serial-jsonl.md
zephyr/mmwavevizlog-runtime/: CMakeLists.txt  README.md
zephyr/mmwavevizlog-runtime/drivers/mr60bha2/: mr60bha2.c  mr60bha2.h  mr60bha2_parser.h
zephyr/mmwavevizlog-runtime/src/: ambient_light.c  app_state.h  json_stream.c  json_stream.h  led_control.h  main.c  net_services.c  net_services.h  ota_control.c
zephyr/mmwavevizlog-runtime/tests/mr60bha2_parser/: CMakeLists.txt  testcase.yaml
zephyr/mr60bha2_console/: CMakeLists.txt  README.md  VERSION  prj.conf
zephyr/mr60bha2_console/boards/: seeed_xiao_esp32c6.overlay  xiao_esp32c6_esp32c6_hpcore.overlay
zephyr/mr60bha2_console/drivers/mr60bha2/: mr60bha2.c  mr60bha2.h  mr60bha2_parser.c
zephyr/mr60bha2_console/src/: ambient_light.h  app_state.c  app_state.h  json_stream.h  led_control.c  main.c  ota_control.h
zephyr/mr60bha2_console/tests/mr60bha2_parser/: CMakeLists.txt
zephyr/mr60bha2_console/tests/mr60bha2_parser/src/: main.c
(+27 files in other folders)
